# secret-my-counter-contract

./: Cargo.toml  Makefile  NOTICE  README.md
.github/workflows/: Integration.yml  Static.yml
frontend/: .env.example  nuxt.config.ts  package.json
frontend/app/: app.config.ts  app.vue
frontend/app/components/: AppDesktopNav.vue  UNotificationStaticContainer.vue  UNotificationWithProgress.vue
frontend/app/composables/: useAppRuntimeConfig.ts  useConnectedWalletAndClientStore.ts  useConnectedWalletEventListener.ts  useConnectedWalletPrivileges.ts  useConnectedWalletStore.ts  usePermitStore.ts  usePermits.ts  useSecretClientProxy.ts  useTransactionStatusStore.ts
frontend/app/pages/: history.vue  index.vue
frontend/app/pages/bookmarks/: new.vue  types.d.ts
src/: instantiate.rs  lib.rs  migrate.rs  msg.rs
src/execute/: increment.rs  mod.rs  permits.rs  reset.rs
src/execute/bookmarked_numbers/: add_bookmark_number.rs  mod.rs  update_bookmark_number_entry.rs
src/migrate/: migration_2024_12_03_001.rs  migration_2024_12_05_001.rs  migration_2024_12_10_001.rs  mod.rs  versions.rs
src/msg/: mod.rs
src/msg/response/: mod.rs
src/query/: count.rs  global_public_user_count_update_history_entries.rs  mod.rs  privileges.rs
src/query/public/: mod.rs
src/query/with_permit/: global_statistic_data.rs  global_user_count_update_history_entries.rs  mod.rs  user_count_update_history_entries.rs  user_statistic_data.rs
src/state/: bookmarked_numbers.rs  config.rs  mod.rs  schema_migrations.rs  state.rs  user_count_update_history.rs  user_statistic_data.rs  utils.rs
(+16 files in other folders)
