[package]
name = "secret_my_counter_contract"
version = "0.1.0"
description = "Secret Contract - Counter Example"
repository = "https://github.com/PikachuEXE/secret-my-counter-contract"
authors = ["PikachuEXE"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11"}
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.11" }
schemars = { version = "0.8.11" }
serde = { version = "1.0" }
thiserror = { version = "2.0.3" }
cosmwasm-schema = "2.1.4"

# Uncomment these for some common extra tools
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", tag = "v0.10.1", default-features = false, features = ["storage", "permit", "utils", "crypto"] }
sqids = "0.4.2"
# cw-storage-plus = { version = "1.0.1", default-features = false }

# [patch.crates-io]
# uncomment this if you use cw-storage-plus
# cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }

[dev-dependencies]
rand = { version = "0.8" }
nanoid = "0.4"

[[bin]]
name = "schema"
required-features = ["schema"]
